# oxide-ci

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.agent  Dockerfile.api  Dockerfile.scheduler  Makefile  README.md  SECURITY.md  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  package.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  ci.yml
.oxide-ci/: compat-pipeline.yaml  dogfood.yaml  pipeline.yaml  plugin-test.yaml
.windsurf/rules/: asyncapi-spec.md  git-github.md  oxide-ci-project.md  rust-coding.md  solo-dev-workflow.md  testing-rules.md
.windsurf/workflows/: add-new-event.md  add-spec-schema.md  address-pr-comments.md  build-and-check.md  check-lingering-tickets.md  create-github-issue.md  debug-issue.md  implement-crate.md  review-codebase.md  run-tests.md  start-dev-environment.md  validate-spec-code-correlation.md  work-ticket.md
crates/oxide-agent/: Cargo.toml
crates/oxide-agent/src/: agent.rs  config.rs  executor.rs  heartbeat.rs  lib.rs
crates/oxide-api/: Cargo.toml
crates/oxide-api/src/: handlers.rs  lib.rs  middleware.rs  routes.rs  state.rs  ws.rs
crates/oxide-api/src/handlers/: agents.rs  approvals.rs  health.rs  mod.rs  pipelines.rs  runs.rs
crates/oxide-auth/: Cargo.toml
crates/oxide-auth/src/: jwt.rs  lib.rs  oidc.rs
crates/oxide-auth/src/providers/: aws.rs  azure.rs  gcp.rs  mod.rs
crates/oxide-billing/: Cargo.toml
crates/oxide-billing/src/: lib.rs  metered.rs  stripe.rs  webhooks.rs
crates/oxide-cache/: Cargo.toml
crates/oxide-cache/src/: archiver.rs  compression.rs  keys.rs  lib.rs  provider.rs  types.rs
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/src/: artifact_tests.rs  cache_tests.rs  client.rs  commands.rs  config.rs  dag.rs  examples_tests.rs  executor.rs  executor_tests.rs  handlers.rs  main.rs  matrix.rs  parallel_tests.rs  retry_tests.rs
crates/oxide-core/: Cargo.toml
crates/oxide-core/src/: agent.rs  approval.rs  cache.rs  error.rs  events.rs  ids.rs  interpolation.rs  lib.rs  pipeline.rs  ports.rs  run.rs  secrets.rs
crates/oxide-core/tests/: serialization_tests.rs
crates/oxide-db/: Cargo.toml
crates/oxide-db/migrations/: 001_pipelines.sql  002_runs.sql  003_logs.sql  004_agents.sql  005_secrets_cache.sql
crates/oxide-db/src/: lib.rs  migrations.rs  repositories.rs
crates/oxide-db/src/repositories/: agent.rs  mod.rs  pipeline.rs  run.rs
crates/oxide-licensing/: Cargo.toml
crates/oxide-licensing/src/: keygen.rs  lib.rs  offline.rs  types.rs
crates/oxide-nats/: Cargo.toml
crates/oxide-nats/src/: bus.rs  config.rs  health.rs  lib.rs  metrics.rs
crates/oxide-nats/tests/: integration_tests.rs
crates/oxide-notify/: Cargo.toml
crates/oxide-notify/src/: channels.rs  lib.rs  sender.rs
crates/oxide-plugins/: Cargo.toml
crates/oxide-plugins/src/: cache.rs  docker.rs  git.rs  host.rs  lib.rs  manifest.rs  registry.rs  rust_toolchain.rs
crates/oxide-runner/: Cargo.toml
crates/oxide-runner/src/: container.rs  environments.rs  firecracker.rs  lib.rs  nix.rs  runner.rs  shell.rs
crates/oxide-scheduler/: Cargo.toml
crates/oxide-scheduler/src/: agents.rs  dag.rs  lib.rs  matrix.rs  queue.rs  scheduler.rs  triggers.rs
crates/oxide-secrets/: Cargo.toml
crates/oxide-secrets/src/: lib.rs  manager.rs  native.rs  providers.rs
crates/oxide-spec/: Cargo.toml  build.rs
crates/oxide-spec/src/: lib.rs  schema.rs  traceability.rs  validation.rs
crates/oxide-spec/tests/: correlation_tests.rs
crates/oxide-tests/: Cargo.toml
crates/oxide-tests/src/: containers.rs  context.rs  fixtures.rs  helpers.rs  lib.rs
crates/oxide-tests/tests/: api_tests.rs  database_tests.rs  eventbus_tests.rs  pipeline_tests.rs
crates/oxide-trace/: Cargo.toml
crates/oxide-trace/src/: context.rs  lib.rs  spans.rs  tracer.rs
docs/: book.toml
docs/product/: brand-identity.md  design-prompts.md  microsite-spec.md  pricing.md  productization.md
docs/src/: SUMMARY.md  architecture.md  caching.md  cli.md  configuration.md  contributing.md  crates.md  environments.md  getting-started.md  installation.md  intro.md  pipeline-reference.md  plugins.md  secrets.md  usage.md
examples/: README.md  firecracker-pipeline.yaml  matrix-pipeline.yaml  nix-pipeline.yaml  pipeline.yaml
examples/deploy-aws/: README.md
examples/deploy-k8s/: README.md
examples/go-microservice/: README.md
examples/monorepo/: README.md
examples/nix-devshell/: README.md
examples/node-api/: README.md
examples/python-hypothesis/: .coverage  README.md  pyproject.toml
examples/python-hypothesis/.hypothesis/constants/: 1d667437bff01374  247bc7ac26075a34  43cbf38ec609ee20  7db7ca4767c346aa  89640101d187cb6c  cbc417c569cf5e1d
examples/python-hypothesis/.oxide-ci/: pipeline.yaml
examples/python-hypothesis/src/calculator/: __init__.py  core.py  exceptions.py  operations.py  validators.py
examples/python-hypothesis/tests/: __init__.py  conftest.py
examples/python-hypothesis/tests/property/: test_calculator_properties.py  test_operations_properties.py
examples/python-hypothesis/tests/unit/: __init__.py  test_operations.py  test_validators.py
examples/python-ml/: README.md
examples/rust-cli/: README.md
examples/rust-fuzzing/: Cargo.toml  README.md
examples/rust-fuzzing/.oxide-ci/: pipeline.yaml
examples/rust-fuzzing/fuzz/: Cargo.toml
examples/rust-fuzzing/fuzz/corpus/fuzz_parse_user/: valid1  valid2
examples/rust-fuzzing/fuzz/fuzz_targets/: fuzz_parse_config.rs  fuzz_parse_user.rs  fuzz_validate_email.rs
examples/rust-fuzzing/src/: lib.rs  main.rs
examples/typescript-playwright/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: analyze_logo.py  generate_architecture_diagram.py  generate_ascii_logo.py  init-db.sql  setup-dev.sh  setup-hooks.sh  sync-wiki.sh
spec/: asyncapi.yaml
spec/channels/: _index.yaml  agent.yaml  approval.yaml  artifact.yaml  billing.yaml  (+9 more)
(+52 files in other folders)
