[package]
name = "oxide-auth"
version.workspace = true
edition = "2024"
description = "OIDC token exchange for Oxide CI"

[dependencies]
oxide-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = "9"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
