[package]
name = "oxide-cache"
version.workspace = true
edition = "2024"
description = "Distributed cache for Oxide CI"

[dependencies]
oxide-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
zstd = "0.13"
flate2 = "1.1"
lz4_flex = "0.11"
aws-sdk-s3 = "1"
tar = "0.4"
directories = "5"
