[package]
name = "oxide-cli"
version.workspace = true
edition = "2024"
description = "Command-line interface for Oxide CI"

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
oxide-core = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
directories = "5"
regex = "1"
tempfile = "3"
petgraph = "0.8.3"
futures.workspace = true
thiserror.workspace = true
