[package]
name = "oxide-licensing"
version.workspace = true
edition = "2024"
description = "Keygen license validation for Oxide CI"

[dependencies]
oxide-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = "2"
