[package]
name = "oxide-licensing"
version.workspace = true
edition = "2024"
description = "Keygen license validation for Oxide CI"

[dependencies]
oxide-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
hostname = "0.4"
num_cpus = "1.16"

[dev-dependencies]
rand = "0.8"
