[package]
name = "oxide-nats"
version.workspace = true
edition = "2024"
description = "NATS event bus implementation for Oxide CI"

[features]
default = []
integration = []

[dependencies]
oxide-core = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
time = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["nats"] }
