[package]
name = "oxide-plugins"
version.workspace = true
edition = "2024"
description = "WASM plugin host for Oxide CI"

[dependencies]
oxide-core = { workspace = true }
extism = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = "6"
oxide-cache = { workspace = true }
