[package]
name = "oxide-scheduler"
version.workspace = true
edition = "2024"
description = "Pipeline scheduling and orchestration for Oxide CI"

[dependencies]
oxide-core = { workspace = true }
oxide-nats = { workspace = true }
oxide-db = { workspace = true }
oxide-licensing = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.7"
cron = "0.15"

[dev-dependencies]
tokio-test = "0.4"
