[package]
name = "rust-fuzzing-example"
version = "0.1.0"
edition = "2021"
description = "Example Rust app with fuzzing and security testing"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
